Feat: Atoms/Colors Feat: Atoms/Icon Feat: Atoms/Select Feat: Atoms/MultiSelect Feat: Atoms/TextAreaInput Feat: Atoms/TextInput Feat: Atoms/Tooltip
Feat: Molecules/Button
Feat: Molecules/SelectField
Feat: Molecules/MultiSelectField

Fix: prettier config
Fix: eslint config

--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -7,6 +7,7 @@ $smoke: rgb(248, 248, 248);
 $white: rgb(255, 255, 255);
 
 // Additional pallet
+$scooter: rgb(38, 186, 212);
 $buttercup: rgb(244, 174, 38);
 $cerulean: rgb(1, 82, 129);
 $cinnabar: rgb(232, 61, 71);
@@ -14,8 +15,8 @@ $fern: rgb(92, 184, 92);
 $sky: rgb(16, 156, 241);
 $tangerine: rgb(229, 114, 0);
 
-$primary: $tangerine;
+$primary: $scooter;
 $secondary: $pebble;
-$tertiary: $cerulean;
+$tertiary: $charcoal;
 
 $error: rgb(255, 52, 24);
