--- a/src/assets/_general.scss
+++ b/src/assets/_general.scss
@@ -5,8 +5,7 @@
 
 * {
   font-family: 'Montserrat', sans-serif;
-  font-size: 12px;
-  background: $white;
-  margin: 0;
+  font-size: 14px;
+  font-weight: 400;
   -webkit-font-smoothing: antialiased;
 }
