--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,5 +1,10 @@
 @import './colors.scss';
 
-@import './general.scss';
-
+@import './button.scss';
 @import './field.scss';
+@import './general.scss';
+@import './icon.scss';
+@import './select.scss';
+@import './textarea';
+@import './textinput';
+@import './tooltip.scss';
