Feat: Atoms/DatePickerInput - creation Feat: Atoms/YearPickerInput - creation Feat: Molecules/DatePickerField - creation Feat: Molecules/YearPickerField - creation Feat: Atoms/Tooltip - Adding enum for menu direction
Fix: corrected classname management and naming (Atoms for input and Molecules for fields)
FIx: defined a minimum with for the datepickerinput and yearpickerinput
Imp: simplifying Atoms stories with only a default sample.

--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,6 +1,7 @@
 @import './colors.scss';
 
 @import './button.scss';
+@import './datapicker.scss';
 @import './field.scss';
 @import './general.scss';
 @import './icon.scss';
