Feat: Accessing the colors from the scss. Mecanics to be replicated in the app consuming the service.
Fix: Align checkbox colors when disabled

--- a/src/assets/_checkbox.scss
+++ b/src/assets/_checkbox.scss
@@ -49,8 +49,9 @@
       }
 
       &.input-checkbox-field-checked {
-        .checkbox-marker .checkbox-marker:hover {
-          color: color.change($primary, $alpha: 0.8);
+        .checkbox-marker,
+        .checkbox-marker:hover {
+          color: $silver;
         }
       }
     }
