--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,12 +1,3 @@
 @import './colors.scss';
 
-@import './button.scss';
-@import './checkbox.scss';
-@import './datapicker.scss';
-@import './field.scss';
-@import './general.scss';
-@import './icon.scss';
-@import './select.scss';
-@import './textarea';
-@import './textinput';
-@import './tooltip.scss';
+@import './global.scss';
