Feat: Atoms/SwitchInput - creation Feat: Molecules/SwitchField - creation
FIx: prevent deployment from the generic field to all input for switch and checkbox purpose
Fix: config of eslint scanning coverage folder previously

--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -5,6 +5,7 @@
 @import './general.scss';
 @import './icon.scss';
 @import './select.scss';
+@import './switch';
 @import './textarea.scss';
 @import './textinput.scss';
 @import './tooltip.scss';
