Feat: Atoms/AmountInput creation Feat: Molecules/AmountField creation Feat: Molecules/PercentageField creation Feat: Molecules/NumberField creation Feat: Organisms/StaticDataTable creation (with selection and row click features)
FIx: Buttons propagation of click event.
FIx: Buttons background color in reverse.
FIx: Updating sorting icons from light to solid

--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -1,11 +1,14 @@
+@import './amount.scss';
+@import './badge.scss';
 @import './button.scss';
 @import './checkbox.scss';
 @import './datapicker.scss';
+@import './datatable.scss';
 @import './field.scss';
 @import './general.scss';
 @import './icon.scss';
 @import './select.scss';
-@import './switch';
+@import './switch.scss';
 @import './textarea.scss';
 @import './textinput.scss';
 @import './tooltip.scss';
