--- a/src/assets/_button.scss
+++ b/src/assets/_button.scss
@@ -7,6 +7,7 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin: auto 4px;
 
   &[color='primary'] {
     background-color: $primary;
@@ -49,7 +50,7 @@
   }
 
   &[color='reversed'] {
-    background-color: $white;
+    background-color: transparent;
     color: $charcoal;
 
     &:not(:disabled) {
