--- a/src/assets/_datapicker.scss
+++ b/src/assets/_datapicker.scss
@@ -699,7 +699,7 @@ $datepicker__triangle-size: 0px !default;
   }
 
   &:read-only:not(:disabled) {
-    background-color: $white;
+    background-color: transparent;
     border: none;
     padding: 0px;
     margin: 0px;
