--- a/src/assets/_datatable.scss
+++ b/src/assets/_datatable.scss
@@ -133,6 +133,16 @@ table {
     &.table--value--selectable {
       padding: auto 2px;
       width: 20px;
+
+      .checkbox-marker {
+        color: $pebble;
+        &:hover {
+          color: $primary;
+        }
+        &.selected {
+          color: $primary;
+        }
+      }
     }
   }
 
