Fix: Atoms/Tooltip replace the base tooltip component and deploying it with the buttons and the staticdatatable

--- a/src/assets/_button.scss
+++ b/src/assets/_button.scss
@@ -1,5 +1,8 @@
 @use 'sass:color';
 
+@import '@szhsin/react-menu/dist/index.css';
+@import '@szhsin/react-menu/dist/transitions/slide.css';
+
 .button-content {
   display: flex;
   flex-direction: row;
