Feat: Organisms/StaticDataTable adding the ability to prevent selection of a row. Feat: Organisms/StaticDataTable adjusting the onSortChange callback not considering the page number (which does not make sense in that context)

--- a/src/assets/_datatable.scss
+++ b/src/assets/_datatable.scss
@@ -140,6 +140,14 @@ table {
         }
       }
     }
+    &.table--value--selectable-disabled {
+      padding: auto 2px;
+      width: 20px;
+
+      .checkbox-marker {
+        color: $pebble;
+      }
+    }
   }
 
   tbody > tr:last-child > td {
