Feat: Atoms/MultiSelectInput enabling color configuration with fallback to corporate theme Feat: Atoms/SelectInput enabling color configuration with fallback to corporate theme Feat: Molecules/MultiSelectField enabling color configuration with fallback to corporate theme Feat: Molecules/SelectField enabling color configuration with fallback to corporate theme Feat: Organisms/LineEditableDataTable Updating logic to support edit (might be revamped to be fully integrated)
Fix: Atoms/DataPickerInput setting background color to white instead of transparent
Fix: Atoms/DataPickerInput setting border color to chalk instead of silver
Fix: Atoms/TextInput setting hover and active border color to primary instead of cerulean
Fix: Atoms/TextAreaInput setting hover and active border color to primary instead of cerulean
Fix: Molecule/AmountField story naming fix
Fix: Adding support to compile scss to be imported as js for colors of corporate theme

--- a/src/assets/_datapicker.scss
+++ b/src/assets/_datapicker.scss
@@ -1,5 +1,5 @@
 $datepicker__background-color: $chalk !default;
-$datepicker__border-color: $silver !default;
+$datepicker__border-color: $chalk !default;
 $datepicker__highlighted-color: $primary !default;
 $datepicker__muted-color: $silver !default;
 $datepicker__selected-color: $primary !default;
@@ -238,6 +238,7 @@ $datepicker__triangle-size: 0px !default;
 }
 
 .react-datepicker__month {
+  background-color: $white;
   margin: $datepicker__margin;
   text-align: center;
 
@@ -690,7 +691,7 @@ $datepicker__triangle-size: 0px !default;
   border-radius: 4px;
   outline: none;
   box-shadow: none;
-  border: 1px solid $silver;
+  border: 1px solid $chalk;
   width: 100%;
 
   &:hover:not(:disabled):not(:read-only),
