--- a/src/assets/_textarea.scss
+++ b/src/assets/_textarea.scss
@@ -20,8 +20,9 @@ textarea {
   outline: 0;
 
   &:not(.input-error):not(:disabled):focus,
-  &:not(.input-error):not(:disabled):active {
-    border: 1px solid $cerulean;
+  &:not(.input-error):not(:disabled):active,
+  &:not(.input-error):not(:disabled):hover {
+    border: 1px solid $primary;
   }
 
   &.input-error {
