Feat: Atoms/Portal component creation (creating a div independent from the current dom which is released once unmounted)
Feat: Atoms/Tooltip Adding portal in tooltip to avoid messing with local DOM
Feat: Molecules/Buttons Adding portal and changing Menu to controlled menu
Fix: Atoms/Tooltip adjusting css

--- a/src/assets/_tooltip.scss
+++ b/src/assets/_tooltip.scss
@@ -1,7 +1,5 @@
 .tooltip {
-  position: absolute;
-  left: 0px;
-  top: 0px;
+  position: fixed;
   text-shadow: none;
   text-transform: none;
   white-space: normal;
