Feat: Atoms/Modal new modal component

--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -7,6 +7,7 @@
 @import './field.scss';
 @import './general.scss';
 @import './icon.scss';
+@import './modal.scss';
 @import './select.scss';
 @import './switch.scss';
 @import './textarea.scss';
