--- a/src/assets/_textinput.scss
+++ b/src/assets/_textinput.scss
@@ -1,11 +1,12 @@
 input.input-text-field {
   border-radius: 4px;
   border: 1px solid $chalk;
-  padding: 6px 10px;
+  padding: 0px 10px;
   outline: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  height: 32px;
 
   &:not(.input-error):not(:disabled):focus,
   &:not(.input-error):not(:disabled):active,
