Feat: Organisms/Navbar creating component
Fix: Adding date-testid in many components
Fix: Replacing all Fontawesome by Icon

--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -8,6 +8,7 @@
 @import './general.scss';
 @import './icon.scss';
 @import './modal.scss';
+@import './navbar.scss';
 @import './select.scss';
 @import './switch.scss';
 @import './textarea.scss';
