--- a/src/assets/_general.scss
+++ b/src/assets/_general.scss
@@ -9,3 +9,12 @@
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
 }
+
+.noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
