Feat: Molecules/Popover component creation
Fix: Organisms/Navbar prevent items to wrap after word break

--- a/src/assets/_navbar.scss
+++ b/src/assets/_navbar.scss
@@ -67,6 +67,7 @@
 
         .nav-bar-menu-label {
           margin-left: 8px;
+          white-space: nowrap;
         }
 
         .nav-bar-menu-caret {
