--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -9,6 +9,7 @@
 @import './icon.scss';
 @import './modal.scss';
 @import './navbar.scss';
+@import './popover.scss';
 @import './select.scss';
 @import './switch.scss';
 @import './textarea.scss';
