Feat: Atoms/Col component creation Feat: Atoms/Row component creation Feat: Organisms/useForm component/hook creation Feat: Organisms/editableDatatable Adding ability to customize the fields based on user preference at column level
Fix: Atoms/AmountInput in read only cursor is default
Fix: Atoms/CheckboxInput get the label to fit its content, instead of spreading
Fix: Atoms/SwitchInput get the label to fit its content, instead of spreading
Fix: Atoms/TextareaInput convert the readonly mode from free text to textarea and cursor is default and adjusting height at initial rendre
Fix: Atoms/TextInput convert the readonly mode from free text to textarea and cursor is default
Fix: Atoms/MultiselectInput changing signature to value only instead of option
Fix: Atoms/SelectInput changing signature to value only instead of option
Fix: Atoms/SwitchInput forcing default value for check to false to prevent switching from controlled to uncontrolled input
Fix: Atoms/DataPicker in read only cursor is default and fixing background to white
Fix: Atoms/GenericField adding margin top to field group and margin bottom to label
Fix: Atoms/Badge changing default color to secondary
Fix: various build warning, chunking, etc...

--- a/src/assets/_checkbox.scss
+++ b/src/assets/_checkbox.scss
@@ -8,6 +8,7 @@
     display: inline-flex;
     position: relative;
     margin-bottom: 8px;
+    width: fit-content;
     cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
