--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -6,6 +6,7 @@
 @import './datatable.scss';
 @import './field.scss';
 @import './general.scss';
+@import './layout.scss';
 @import './icon.scss';
 @import './modal.scss';
 @import './navbar.scss';
