--- a/src/assets/_textarea.scss
+++ b/src/assets/_textarea.scss
@@ -7,31 +7,39 @@ div.input-textarea-parent {
   height: auto;
   display: flex;
   flex-direction: row;
-}
 
-textarea {
-  flex: 1;
-  resize: none;
-  min-height: 80px;
-  max-height: 200px;
-  border-radius: 4px;
-  border: 1px solid $chalk;
-  padding: 6px 10px;
-  outline: 0;
+  textarea {
+    flex: 1;
+    resize: none;
+    min-height: 80px;
+    max-height: 200px;
+    border-radius: 4px;
+    border: 1px solid $chalk;
+    padding: 6px 10px;
+    outline: 0;
 
-  &:not(.input-error):not(:disabled):focus,
-  &:not(.input-error):not(:disabled):active,
-  &:not(.input-error):not(:disabled):hover {
-    border: 1px solid $primary;
-  }
+    &:not(.input-error):not(:disabled):not(:read-only):focus,
+    &:not(.input-error):not(:disabled):not(:read-only):active,
+    &:not(.input-error):not(:disabled):not(:read-only):hover {
+      border: 1px solid $primary;
+    }
 
-  &.input-error {
-    border: 1px solid $error;
-  }
+    &:read-only,
+    &:read-only:hover,
+    &:read-only:active,
+    &:read-only:focus {
+      border: 1px solid $chalk;
+      cursor: default;
+    }
 
-  &:disabled {
-    border: 0px;
-    background-color: $chalk;
-    color: $pebble;
+    &.input-error {
+      border: 1px solid $error;
+    }
+
+    &:disabled {
+      border: 0px;
+      background-color: $chalk;
+      color: $pebble;
+    }
   }
 }
