--- a/src/assets/_textinput.scss
+++ b/src/assets/_textinput.scss
@@ -22,5 +22,10 @@ input.input-text-field {
     border: 0px;
     background-color: $chalk;
     color: $pebble;
+    cursor: default;
   }
+}
+
+.input-text-field-read-only {
+  cursor: default;
 }
