--- a/src/assets/_field.scss
+++ b/src/assets/_field.scss
@@ -11,15 +11,15 @@
 
     .field-label {
       display: inline-block;
-      padding-right: 10px;
-      padding-bottom: 0px;
+      margin-right: 10px;
+      margin-bottom: 0px;
     }
   }
 
   .field-label {
     display: flex;
     font-weight: 600;
-    padding: 4px 0;
+    padding-bottom: 8px;
     align-items: center;
 
     .field-label-mandatory {
