--- a/src/assets/_switch.scss
+++ b/src/assets/_switch.scss
@@ -7,6 +7,7 @@
     position: relative;
     margin-bottom: 8px;
     cursor: default;
+    width: fit-content;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
