Feat: Molecules/Button Adding popover to confirm action button Feat: Organisms/EditableDatatable Adding deletion popover, managing translations, is loading state, no data state Feat: Organisms/LineEditableInPlaceDatatable Adding deletion popover, managing translations, is loading state, no data state Feat: Organisms/StaticDatatable Adding managing translations, is loading state, no data state
Fix: Molecules/Popover cleaning interface to prevent circular dependency (popover/button)
Fix: Molecules/Popover reducing minimum popover width to 3rem and padding.
Fix: Organisms/StaticDataTable stop messing with zindex

--- a/src/assets/_datatable.scss
+++ b/src/assets/_datatable.scss
@@ -14,7 +14,6 @@
   .table--header-value--title {
     flex: 1;
     position: relative;
-    z-index: 1;
     font-weight: 700;
     &.center {
       text-align: center;
@@ -101,6 +100,12 @@ table {
 
     &:active.selected {
       background-color: color.change($primary, $alpha: 0.66);
+    }
+    &.no-data {
+      background-color: $white !important;
+      td {
+        text-align: center;
+      }
     }
   }
 
