--- a/src/assets/_field.scss
+++ b/src/assets/_field.scss
@@ -1,5 +1,9 @@
 @use 'sass:math';
 
+.field-group + .field-group {
+  margin: 10px 0px;
+}
+
 .field-group {
   display: flex;
   flex-direction: column;
