Fix: Atoms/Typography.Text adding highlight and disabled

--- a/src/assets/_typography.scss
+++ b/src/assets/_typography.scss
@@ -51,4 +51,10 @@ span.typography {
     font-size: 12px;
     color: $error;
   }
+  &.highlighted {
+    color: $tangerine;
+  }
+  &.disabled {
+    color: $pebble;
+  }
 }
