--- a/src/assets/_typography.scss
+++ b/src/assets/_typography.scss
@@ -1,4 +1,4 @@
-span.typography {
+*.typography {
   white-space: wrap;
   display: block;
 
@@ -11,17 +11,34 @@ span.typography {
   }
 }
 
+[contenteditable='true'].typography {
+  white-space: nowrap;
+  overflow: hidden;
+  br {
+    display: none;
+  }
+  * {
+    display: inline;
+    white-space: nowrap;
+  }
+}
+
 h1.typography {
+  margin: auto 0px;
   text-transform: uppercase;
   font-size: 22px;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 h2.typography {
+  margin: auto 0px;
   font-size: 18px;
   font-weight: 600px;
 }
 
 h3.typography {
+  margin: auto 0px;
   font-size: 16px;
   font-weight: 600;
 }
