Feat: Organisms/ActionBar Adding back icon, badges, multilevel action bar Feat: Atoms/DynamicSearchInput component creation Feat: Atoms/DynamicSearchCreatableInput component creation
Fix: Inputs disabled colors and background colors
Fix: Inputs size (to fit 32px)
Fix: Organisms/StaticDataTable Ensure table setting are only applied to .cui-table
Fix: Atoms/DatePickerInput Adding portal to date picker
Fix: Atoms/YearPickerInput Adding portal to year picker

--- a/src/assets/_amount.scss
+++ b/src/assets/_amount.scss
@@ -1,15 +1,20 @@
 .amount-field {
-  height: 32px;
   outline: none;
   text-align: right;
   border: 1px solid $chalk;
   border-radius: 4px;
-  padding-right: 8px;
+  padding: 6px 8px;
   white-space: nowrap;
 
-  &:hover,
-  &:focus {
+  &:hover:not(:disabled):not(:read-only),
+  &:focus:not(:disabled):not(:read-only) {
     border: 1px solid $primary;
+  }
+
+  &:disabled {
+    border: 1px solid transparent;
+    background-color: $chalk;
+    color: $pebble;
   }
 
   &.amount-field-read-only {
