--- a/src/assets/_badge.scss
+++ b/src/assets/_badge.scss
@@ -11,8 +11,9 @@
   border-radius: 0.25rem;
 
   &.pill {
-    padding-right: 0.4em;
-    padding-left: 0.3em;
+    font-size: 10px;
+    padding-right: 6px;
+    padding-left: 6px;
     border-radius: 10rem;
   }
 
