--- a/src/assets/_actionbar.scss
+++ b/src/assets/_actionbar.scss
@@ -6,7 +6,21 @@
   padding-right: 20px;
   height: 50px;
 
+  &:not(.primary) {
+    position: sticky;
+    &:before {
+      border-bottom: 1px solid #e4e4e4;
+      bottom: 0;
+      content: '';
+      height: 1px;
+      left: 20px;
+      position: absolute;
+      right: 20px;
+    }
+  }
+
   &.primary {
+    position: sticky;
     box-shadow: 0 2px 10px 0 rgb(51 51 51 / 20%);
   }
 
@@ -14,19 +28,25 @@
     display: flex;
     flex-direction: row;
     overflow: hidden;
-
     cursor: default;
-    // border: 1px dotted green;
+
+    .back-icon {
+      color: $charcoal;
+      margin: auto 5px auto 0px;
+      overflow: hidden;
+    }
+
     .align-edit {
       border: 1px solid transparent;
       margin-left: 2px;
       margin-right: 2px;
       overflow: hidden;
-      // text-overflow: ellipsis;
     }
+
     .clickable {
       cursor: pointer;
     }
+
     .title-edit {
       display: flex;
       margin: auto 0px;
@@ -43,13 +63,22 @@
         outline: none;
       }
     }
+
+    .badges {
+      display: flex;
+      color: $charcoal;
+      overflow: hidden;
+      padding: auto 5px;
+      & > * {
+        margin: auto 5px;
+      }
+    }
   }
 
   .right-side {
     display: flex;
     flex-direction: row;
     justify-content: end;
-    // border: 1px dotted red;
 
     .actions {
       display: flex;
