--- a/src/assets/_modal.scss
+++ b/src/assets/_modal.scss
@@ -59,6 +59,9 @@
       display: flex;
       flex-direction: row;
       justify-content: end;
+      & > * {
+        margin: auto 4px;
+      }
     }
   }
 }
