Feat: Molecules/DynamicSearchField component creation Feat: Molecules/DynamicSearchCreatableField component creation
Fix: Organisms/ActionBar Enabling border on focus and hover of the search bar
Fix: Restoring default cursor management

--- a/src/assets/_navbar.scss
+++ b/src/assets/_navbar.scss
@@ -40,10 +40,9 @@
         &.nav-bar-search-container {
           border-radius: 4px;
           border: 1px solid $chalk;
-          cursor: unset;
 
-          & > input:focus,
-          &:hover {
+          .nav-bar-search:focus,
+          .nav-bar-search:hover {
             border: 1px solid $primary;
           }
 
