Feat: Atoms/Link component creation (for internal and external links) Feat: Atoms/Form add for description and collapsable Feat: Organisms/LineEdittableDataTable component creation (edition in a modal with optional data validation)
Fix: Atoms/Layout removing overflow on row, col and removing padding on collapse
Fix: Atoms/YearPickerInput provide a way to disable portal (for modal use case)
Fix: Atoms/DatePickerInput provide a way to disable portal (for modal use case)
Fix: Atoms/SelectInput provide a way to disable portal (for modal use case)
Fix: Atoms/MultiSelectInput provide a way to disable portal (for modal use case)
Fix: Atoms/DynamicSearchInput provide a way to disable portal (for modal use case)
Fix: Atoms/DynamicSearchCreatableInput provide a way to disable portal (for modal use case)

--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -5,6 +5,7 @@
 @import './checkbox.scss';
 @import './datapicker.scss';
 @import './datatable.scss';
+@import './externallink.scss';
 @import './field.scss';
 @import './general.scss';
 @import './layout.scss';
