Fix: justify-content: end requires -webkit-justify-content: flex-end for webkit (safari) support

--- a/src/assets/_popover.scss
+++ b/src/assets/_popover.scss
@@ -14,6 +14,8 @@
     display: flex;
     flex-direction: row;
     justify-content: end;
+    -webkit-justify-content: flex-end;
+
     & > * {
       margin: auto 4px;
     }
