--- a/src/assets/_actionbar.scss
+++ b/src/assets/_actionbar.scss
@@ -81,6 +81,7 @@
     display: flex;
     flex-direction: row;
     justify-content: end;
+    -webkit-justify-content: flex-end;
 
     .actions {
       display: flex;
