--- a/src/assets/_actionbar.scss
+++ b/src/assets/_actionbar.scss
@@ -32,38 +32,57 @@
     .back-icon {
       color: $charcoal;
       margin: auto 5px auto 0px;
-      overflow: hidden;
     }
 
     .title {
-      display: flex;
+      display: inline-flex;
       overflow: hidden;
-    }
-    .align-edit {
-      border: 1px solid transparent;
-      margin-left: 2px;
-      margin-right: 2px;
-      overflow: hidden;
-    }
 
-    .clickable {
-      cursor: pointer;
-    }
+      .align-edit {
+        border: 1px solid transparent;
+        margin-left: 2px;
+        margin-right: 2px;
+      }
 
-    .title-edit {
-      display: flex;
-      margin: auto 0px;
-      text-transform: uppercase;
-      font-size: 22px;
-      white-space: nowrap;
-      overflow: hidden;
-      border: 1px solid $pebble;
-      outline: none;
-      box-shadow: none;
-      &:hover,
-      &:focus {
-        border: 1px solid $primary;
+      .clickable {
+        cursor: pointer;
+      }
+
+      .title-edit-hidden {
+        display: inline-flex;
+        position: absolute;
+        margin: auto 2px;
+        text-transform: uppercase;
+        text-overflow: ellipsis;
+        font-size: 22px;
+        white-space: nowrap;
+        overflow: hidden;
         outline: none;
+        color: transparent;
+        border: 1px solid transparent;
+        z-index: -1;
+        border-radius: 4px;
+      }
+
+      .title-edit {
+        display: inline-flex;
+        margin: auto 2px;
+        text-transform: uppercase;
+        text-overflow: ellipsis;
+        font-size: 22px;
+        white-space: nowrap;
+        overflow: hidden;
+        outline: none;
+        border: 1px solid transparent;
+        border-radius: 4px;
+
+        &:not(:read-only):hover {
+          border: 1px solid $chalk;
+        }
+
+        &:not(:read-only):focus {
+          border: 1px solid $primary;
+        }
       }
     }
 
