Fix: Organisms/ActionBar: Adding padding for the shadow title to fit title size

--- a/src/assets/_actionbar.scss
+++ b/src/assets/_actionbar.scss
@@ -52,6 +52,7 @@
         display: inline-flex;
         position: absolute;
         margin: auto 2px;
+        padding-right: 4px;
         text-transform: uppercase;
         text-overflow: ellipsis;
         font-size: 22px;
