Fix: Organisms/SideBar component creation

--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -14,6 +14,7 @@
 @import './navbar.scss';
 @import './popover.scss';
 @import './select.scss';
+@import './sidebar.scss';
 @import './switch.scss';
 @import './textarea.scss';
 @import './textinput.scss';
