Test: Atoms/Link adding tests

--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -5,11 +5,11 @@
 @import './checkbox.scss';
 @import './datapicker.scss';
 @import './datatable.scss';
-@import './externallink.scss';
 @import './field.scss';
 @import './general.scss';
-@import './layout.scss';
 @import './icon.scss';
+@import './layout.scss';
+@import './link.scss';
 @import './modal.scss';
 @import './navbar.scss';
 @import './popover.scss';
