Feat: Atoms/FileInput Component creation

--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -6,6 +6,7 @@
 @import './datapicker';
 @import './datatable';
 @import './field';
+@import './file';
 @import './general';
 @import './icon';
 @import './layout';
