Fix: Atoms/AmountInput fix border color which was changing when in error and being hovered Fix: Atoms/CheckboxInput fix cursor to default when in readonly of disabled Fix: Atoms/SwitchInput fix cursor to be a point when input is editabled, and default when in readonly or disabled Fix: Atoms/DatePickerInput fix story using locale Fix: Organisms/DatePickerField fix story using locale
Feat: Organisms/FileField component creation

Doc: Atoms/FileInput fix type

--- a/src/assets/_checkbox.scss
+++ b/src/assets/_checkbox.scss
@@ -39,6 +39,7 @@
 
     &.input-checkbox-field-read-only,
     &.input-checkbox-field-disabled {
+      cursor: default;
       color: $pebble;
 
       &:not(.input-checkbox-field-checked) {
