--- a/src/assets/_amount.scss
+++ b/src/assets/_amount.scss
@@ -6,8 +6,8 @@
   padding: 6px 8px;
   white-space: nowrap;
 
-  &:hover:not(:disabled):not(:read-only),
-  &:focus:not(:disabled):not(:read-only) {
+  &:hover:not(:disabled):not(:read-only):not(.amount-field-error),
+  &:focus:not(:disabled):not(:read-only):not(.amount-field-error) {
     border: 1px solid $primary;
   }
 
