--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -14,6 +14,7 @@
 @import './modal';
 @import './navbar';
 @import './popover';
+@import './richtext';
 @import './select';
 @import './sidebar';
 @import './switch';
