--- a/src/assets/_textarea.scss
+++ b/src/assets/_textarea.scss
@@ -2,7 +2,7 @@
 /* TEXTAREA */
 /************/
 
-div.input-textarea-parent {
+.gds-input-textarea-parent {
   width: auto;
   height: auto;
   display: flex;
