--- a/src/assets/_button.scss
+++ b/src/assets/_button.scss
@@ -1,6 +1,7 @@
+@charset "UTF-8";
 @use 'sass:color';
 
-.button-content {
+.gds-button-content {
   display: flex;
   flex-direction: row;
   height: 30px;
@@ -95,7 +96,6 @@
 
 // FROM @import '~@szhsin/react-menu/dist/index.css';
 
-@charset "UTF-8";
 .szh-menu-container {
   position: relative;
   width: 0px;
