--- a/src/assets/_field.scss
+++ b/src/assets/_field.scss
@@ -1,10 +1,10 @@
 @use 'sass:math';
 
-.field-group + .field-group {
+.gds-field-group + .gds-field-group {
   margin: 10px 0px;
 }
 
-.field-group {
+.gds-field-group {
   display: flex;
   flex-direction: column;
 
