--- a/src/assets/_richtext.scss
+++ b/src/assets/_richtext.scss
@@ -1,6 +1,6 @@
 @import '~suneditor/dist/css/suneditor.min.css';
 
-.rich-text-container {
+.gds-rich-text-container {
   .se-wrapper-inner {
     border: 1px solid transparent;
     &:focus {
