--- a/src/assets/_select.scss
+++ b/src/assets/_select.scss
@@ -1,4 +1,4 @@
-.select-container {
+.gds-select-container {
   max-width: 100%;
 
   .visible {
@@ -28,9 +28,8 @@
     min-width: 20px;
     margin: 0px 4px;
   }
-}
-
-.dynamic-search-spinner {
-  margin-right: 20px;
-  color: $charcoal;
+  .dynamic-search-spinner {
+    margin-right: 20px;
+    color: $charcoal;
+  }
 }
