Feat: Atoms/RichTextInput Add highlighting ability, and css styling Feat: Organisms/FileField Add file counter when there is a restriction Feat: Organisms/RichTextField Component creation
Docs: Add actions with on trigger and keep required fields up top.
Docs: Organisms/RichTextField Add story

Build: Atoms/RichTextInput ensure the Land type is properly exported

Fix: Atoms/RichTextInput crash when none of link and image are enabled

--- a/src/assets/_richtext.scss
+++ b/src/assets/_richtext.scss
@@ -27,6 +27,13 @@
     }
   }
 
+  &.highlighted {
+    .se-wrapper-inner,
+    .se-wrapper-inner:focus {
+      border: 1px solid $tangerine;
+    }
+  }
+
   .sun-editor-editable {
     * {
       box-sizing: border-box;
