Feat: Organisms/StaticDataTable Add icon to no data state Feat: Organisms/EditableDataTable Add icon to no data state Feat: Organisms/LineEdiatableDataTable Add icon to no data state Feat: Organisms/LineEdiatableInPlaceDataTable Add icon to no data state
Fix: Organisms/StaticDataTable ensure the footer of the table is only present when the total is required
Fix: Organisms/StaticDataTable ensure the total can be localized

Test: Adding global export tests
Test: Adding Atoms/Icons tests

--- a/src/assets/_datatable.scss
+++ b/src/assets/_datatable.scss
@@ -111,6 +111,17 @@
       background-color: $white !important;
       td {
         text-align: center;
+        .no-data-container {
+          display: flex;
+          flex-direction: column;
+          color: $pebble;
+          .no-data-text {
+            margin-top: 20px;
+          }
+          .no-data-icon{
+            margin-top: 10px;
+          }
+        }
       }
     }
   }
