Feat: Atoms/RichTextInput removing extra boarders Feat: Atoms/RichTextInput adding format styling Feat: Organisms/CheckboxCell adding component and ability to have checkbox in table Feat: Organisms/Form adding custom field, file field, richtext field, table field Feat: Organisms/useForm adding console.error when submitting a for with yup errors (as errors are not well monitored)
Build: Adding source to stories
Build: Adding accessibility info to stories
Build: Disabling circular dependency error at build time (Form => Table => Form)

Fix: Atoms/RichTextInput adding hover state
Fix: Atoms/Modal When closing the modal when hidding it, the body was still fixed
Fix: Organisms/LineEditableDataTable Call onRowSubmit and onRowCancelEdit when submitting a row or Cancelling edition of a row

Test: Atoms/Checkbox updating data-testid mechanism

--- a/src/assets/_richtext.scss
+++ b/src/assets/_richtext.scss
@@ -3,7 +3,8 @@
 .gds-rich-text-container {
   .se-wrapper-inner {
     border: 1px solid transparent;
-    &:focus {
+    &:focus,
+    &:hover {
       border: 1px solid $primary;
     }
   }
@@ -46,7 +47,14 @@
   // Replacement of the toolbar bottom outline by a border
   .sun-editor .se-toolbar {
     outline: unset;
-    border-bottom: 1px solid #dadada;
+    border: none;
+    background-color: transparent;
+    .se-btn-select.se-btn-tool-format {
+      width: 100px;
+    }
+    .se-btn-module-border{
+      border: none;
+    }
   }
 
   // Prevent usage of image via links
