--- a/src/assets/_general.scss
+++ b/src/assets/_general.scss
@@ -4,9 +4,8 @@
 }
 
 * {
-  font-family: 'Montserrat', sans-serif;
+  font-family: $fontfamily;
   font-size: 14px;
-  font-weight: 400;
   -webkit-font-smoothing: antialiased;
 }
 
