Feat: Atoms/SelectInput Adding custom dropdown indicator and clear indicator Feat: Atoms/MultiSelectInput Adding custom dropdown indicator and clear indicator Feat: Atoms/DynamicSearchInput Adding custom magnifier as dropdown indicator and clear indicator Feat: Atoms/DynamicSearchCreatableInput Adding custom magnifier as dropdown indicator and clear indicator Feat: Atoms/DynamicSearchCreatableInput Adding ellipsis with tooltip feature in readonly mode Feat: Atoms/DynamicSearchInput Adding ellipsis with tooltip feature in readonly mode Feat: Atoms/MultiSelectInput Adding ellipsis with tooltip feature in readonly mode Feat: Atoms/SelectInput Adding ellipsis with tooltip feature in readonly mode Feat: Atoms/AmountInput Adding ellipsis with tooltip feature in readonly for non format type Feat: Atoms/TextInput Adding ellipsis with tooltip feature in readonly Feat: Atoms/Tooltip Adding ability to disable the tooltip for the ellipsis use case Feat: Atoms/Typography Give the ability to show tooltip when the text is ellipsed
Fix: Fix fields separations from 20px to 8px (4px on top and bottom)

--- a/src/assets/_select.scss
+++ b/src/assets/_select.scss
@@ -25,11 +25,17 @@
     position: sticky;
     right: 0;
     white-space: nowrap;
-    min-width: 20px;
     margin: 0px 4px;
   }
   .dynamic-search-spinner {
     margin-right: 20px;
     color: $charcoal;
+  }
+  .dynamic-search-icon {
+    margin: 8px;
+    color: $silver;
+    &:hover {
+      color: $charcoal;
+    }
   }
 }
