Feat: Organisms/Filter component creation Feat: Atoms/CheckboxInput introducing inline checkbox Feat: Atoms/Section making the seperator optional, so it can be disabled for filter modal
Fix: Atoms/AmountInput Avoid overflow of text with ellipsis
Fix: Atoms/AmountInput Avoid word wrapping
Fix: Atoms/CheckboxInput Use padding instead of margin
Fix: Atoms/GenericField fixing inline mode
Fix: Atoms/Inputs Removing all field size
Fix: Atoms/AmountInput using single string in readonly mode instead of concatenated strings
Fix: Atoms/Tooltip Remove use of screen availwidth/availheight to the benefit of document.body.clientwidth/clientheight in case of iframe (such as in storybook)
Fix: Atoms/Typography use title attribute instead of tooltip (for performance reason)

Doc: Getting stories full screen

--- a/src/assets/_amount.scss
+++ b/src/assets/_amount.scss
@@ -5,6 +5,10 @@
   border-radius: 4px;
   padding: 6px 8px;
   white-space: nowrap;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  box-sizing: border-box;
+  width: 100%;
 
   &:hover:not(:disabled):not(:read-only):not(.amount-field-error),
   &:focus:not(:disabled):not(:read-only):not(.amount-field-error) {
