--- a/src/assets/_checkbox.scss
+++ b/src/assets/_checkbox.scss
@@ -4,10 +4,29 @@
   display: flex;
   flex-direction: column;
 
+  &.inline {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+
+    label {
+      display: inline;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      padding-bottom: 0px;
+
+      .checkbox-marker {
+        display: inline;
+        padding-right: 8px;
+        padding-left: 8px;
+      }
+    }
+  }
+
   label {
     display: inline-flex;
-    position: relative;
-    margin-bottom: 8px;
+    padding-bottom: 8px;
     width: fit-content;
     cursor: pointer;
     -webkit-user-select: none;
@@ -16,7 +35,7 @@
     user-select: none;
 
     .checkbox-marker {
-      margin-right: 8px;
+      padding-right: 8px;
     }
 
     &:not(.input-checkbox-field-read-only),
