--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -7,6 +7,7 @@
 @import './datatable';
 @import './field';
 @import './file';
+@import './filter';
 @import './icon';
 @import './layout';
 @import './link';
