Fix: Atoms/FileInput managing new field classname
Doc: Organisms/Datatable adding selectable, clickable row demo and buttons

--- a/src/assets/_file.scss
+++ b/src/assets/_file.scss
@@ -1,4 +1,7 @@
 .gds-file-input-container {
+  display: flex;
+  flex-direction: column;
+
   .droparea {
     border: 2px dashed $chalk;
     border-radius: 4px;
