--- a/src/assets/_richtext.scss
+++ b/src/assets/_richtext.scss
@@ -53,9 +53,14 @@
     .se-btn-select.se-btn-tool-format {
       width: 100px;
     }
-    .se-btn-module-border{
+    .se-btn-module-border {
       border: none;
     }
+  }
+
+  // Hidding background color of the character counter
+  .sun-editor .se-resizing-bar {
+    background-color: transparent;
   }
 
   // Prevent usage of image via links
