Feat: Atoms/Pulsar component creation
Fix: Atoms/Badge remove font-weight
Fix: Fields set a minimum width of 50px
Fix: Atoms/RichText adding white background to the sticky toolbar in case of small screen
Fix: Setting h1 font weight to 400
Fix: Organisms/Form disabling portal for select, multiselect, dynamic search and dynamic search creatable (keeping it only for datepicker and year picker)
Fix: Organisms/LineEditableDatable disabling portal for forms (only date picker and year picker)

--- a/src/assets/_link.scss
+++ b/src/assets/_link.scss
@@ -1,6 +1,12 @@
 .gds-link-container {
   margin: auto;
   color: $charcoal;
+  a,
+  a:hover,
+  a:focus,
+  a:visited {
+    color: unset;
+  }
 
   &:hover,
   &:focus {
