--- a/src/assets/_richtext.scss
+++ b/src/assets/_richtext.scss
@@ -49,7 +49,7 @@
   .sun-editor .se-toolbar {
     outline: unset;
     border: none;
-    background-color: transparent;
+    background-color: $white;
     .se-btn-select.se-btn-tool-format {
       width: 100px;
     }
