--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -13,6 +13,7 @@
 @import './link';
 @import './modal';
 @import './navbar';
+@import './pulsar';
 @import './popover';
 @import './richtext';
 @import './select';
