--- a/src/assets/_navbar.scss
+++ b/src/assets/_navbar.scss
@@ -7,6 +7,13 @@
   margin: 0;
   height: 64px;
 
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
   .nav-bar-brand {
     margin: 10px;
     height: 44px;
