--- a/src/assets/_switch.scss
+++ b/src/assets/_switch.scss
@@ -8,7 +8,10 @@
     margin-bottom: 8px;
     width: fit-content;
     cursor: pointer;
+
+    -webkit-touch-callout: none;
     -webkit-user-select: none;
+    -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
