--- a/src/assets/_typography.scss
+++ b/src/assets/_typography.scss
@@ -27,6 +27,7 @@ h1.gds-typography {
   margin: auto 0px;
   text-transform: uppercase;
   font-size: 22px;
+  font-weight: 400;
   white-space: nowrap;
   overflow: hidden;
 }
